syntax = "proto3";

option go_package = "github.com/chkda/go-grpc-course/orderMgmnt/orderMgmnt";

package orderMgmnt;

service OrderManagement {
    rpc addOrder(Order) returns (OrderID);
    rpc getOrder(OrderID) returns (Order);
}

message OrderID {
    string value = 1;
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}